Enhance SEO and social media meta tags
Updated meta tags for SEO and social media sharing, including title, description, and keywords. Added schema.org JSON-LD for structured data.

--- a/index.html
+++ b/index.html
@@ -1,44 +1,71 @@
 <!doctype html>
         <html lang=en>
+
 <head>
-    <!-- Basic Meta -->
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Title (60 chars max for SEO) -->
-    <title>Sarbada Sanjel | Expert Backend Developer</title>
-
-    <!-- SEO Meta -->
-    <meta name="description" content="Sarbada Sanjel is an expert backend developer specializing in scalable, secure, and high-performance backend solutions. Hire a professional backend developer today.">
-    <meta name="author" content="Sarbada Sanjel">
+    <!-- Basic -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="index, follow">
-    <meta name="google-site-verification" content="22yTgiiZ6MK2kmJnOaqOymLvLC-yfAORTzCB5eAJ5iE">
+    <meta name="theme-color" content="#000000">
 
-    <!-- Canonical URL -->
-    <link rel="canonical" href="https://www.sarbadasanjel.com.np/">
+    <!-- Favicon -->
+    <link rel="icon" type="image/webp" href="/assets/imgs/avatar.webp">
 
-    <!-- Open Graph (Facebook, LinkedIn, etc.) -->
-    <meta property="og:title" content="Sarbada Sanjel | Expert Backend Developer">
-    <meta property="og:description" content="Discover Sarbada Sanjel, a professional backend developer delivering scalable, secure, and efficient backend solutions.">
+    <!-- Sitemap -->
+    <link rel="sitemap" href="/sitemap-index.xml">
+
+    <!-- Primary Meta Tags -->
+    <title>Sarbada Sanjel - Backend Developer | Node.js, APIs</title>
+    <meta name="title" content="Sarbada Sanjel - Backend Developer | Node.js, APIs">
+    <meta name="description" content="Backend developer specializing in Node.js, APIs, databases, and scalable backend systems. View Sarbada Sanjel’s portfolio and backend projects.">
+    <meta name="keywords" content="backend developer, node.js, api development, database design, sarbada sanjel, backend engineer">
+    <meta name="author" content="Sarbada Sanjel">
+
+    <!-- Canonical -->
+    <link rel="canonical" href="https://www.sarbadasanjel.com.np">
+
+    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.sarbadasanjel.com.np/">
+    <meta property="og:url" content="https://www.sarbadasanjel.com.np">
+    <meta property="og:title" content="Sarbada Sanjel - Backend Developer | Node.js, APIs">
+    <meta property="og:description" content="Professional backend developer delivering secure, scalable, and high-performance backend solutions.">
     <meta property="og:image" content="https://www.sarbadasanjel.com.np/assets/imgs/ogimage.webp">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
+    <meta property="og:locale" content="en_US">
     <meta property="og:site_name" content="Sarbada Sanjel">
 
-    <!-- Twitter Card -->
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Sarbada Sanjel | Expert Backend Developer">
-    <meta name="twitter:description" content="Hire Sarbada Sanjel for scalable and secure backend development solutions.">
+    <meta name="twitter:url" content="https://www.sarbadasanjel.com.np">
+    <meta name="twitter:title" content="Sarbada Sanjel - Backend Developer | Node.js, APIs">
+    <meta name="twitter:description" content="Hire Sarbada Sanjel for scalable backend systems, APIs, and database architecture.">
     <meta name="twitter:image" content="https://www.sarbadasanjel.com.np/assets/imgs/ogimage.webp">
 
-    <!-- Favicon -->
-    <link rel="icon" href="./assets/imgs/avatar.webp" type="image/webp">
+    <!-- Schema.org JSON-LD -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Sarbada Sanjel",
+        "jobTitle": "Backend Developer",
+        "url": "https://www.sarbadasanjel.com.np",
+        "image": "https://www.sarbadasanjel.com.np/assets/imgs/avatar.webp",
+        "knowsAbout": [
+            "Node.js",
+            "Backend Development",
+            "API Design",
+            "Databases",
+            "System Architecture"
+        ],
+        "description": "Backend developer specializing in scalable, secure, and high-performance backend systems."
+    }
+    </script>
 
-    <!-- Stylesheets -->
+    <!-- Styles -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
     <link rel="stylesheet" href="assets/css/sarbada.css">
+
 
                 <style>
                         .header .container {
