Update title to reflect Full Stack Developer role

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="sitemap" href="/sitemap-index.xml">
 
     <!-- Primary Meta Tags -->
-    <title>Sarbada Sanjel - Backend Developer | Node.js, APIs</title>
+    <title>Sarbada Sanjel - Full Stack Developer </title>
     <meta name="title" content="Sarbada Sanjel - Backend Developer | Node.js, APIs">
     <meta name="description" content="Backend developer specializing in Node.js, APIs, databases, and scalable backend systems. View Sarbada Sanjel’s portfolio and backend projects.">
     <meta name="keywords" content="backend developer, node.js, api development, database design, sarbada sanjel, backend engineer">
